--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.17.1",
     "react-day-picker": "^8.10.1",
     "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.3.1",
@@ -74,6 +75,7 @@
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19",
     "postcss": "^8",
     "prisma": "^6.2.1",
