--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed": "ts-node ./prisma/seeds/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.2.1",
@@ -33,6 +34,8 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-email/components": "^0.0.32",
     "@react-email/render": "^1.0.4",
@@ -52,6 +55,7 @@
     "next": "^15.1.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
+    "nylas": "^7.7.4",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
     "react-day-picker": "^8.10.1",
