--- a/package.json
+++ b/package.json
@@ -52,10 +52,11 @@
     "googleapis": "^144.0.0",
     "lucide-react": "^0.471.1",
     "moment": "^2.30.1",
+    "nanoid": "^5.0.9",
     "next": "^15.1.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
-    "nylas": "^7.7.4",
+    "nylas": "^7.5.2",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
     "react-day-picker": "^8.10.1",
@@ -74,6 +75,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@nylas/react": "^1.1.3",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
