--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@nylas/react": "^1.1.3",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/lru-cache": "^7.10.9",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
