--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "migrate": "npx prisma db push",
+    "generate": "npx prisma generate",
     "seed": "npx prisma db seed"
   },
   "prisma": {
@@ -22,6 +23,7 @@
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -44,6 +46,7 @@
     "@react-email/components": "^0.0.32",
     "@react-email/render": "^1.0.4",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.67.2",
     "@tanstack/react-table": "^8.20.6",
     "@uploadthing/react": "^7.1.5",
     "axios": "^1.7.9",
@@ -59,6 +62,7 @@
     "next": "^15.1.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
+    "nuqs": "^2.4.1",
     "nylas": "^7.5.2",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
