feat: add chat module

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
     "googleapis": "^144.0.0",
+    "http": "^0.0.1-security",
     "lucide-react": "^0.471.1",
     "moment": "^2.30.1",
     "nanoid": "^5.0.9",
@@ -75,6 +76,8 @@
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
