--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "nuqs": "^2.4.1",
     "nylas": "^7.5.2",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.17.1",
     "react-day-picker": "^8.10.1",
     "react-doc-viewer": "^0.1.14",
