--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19",
     "postcss": "^8",
