--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
@@ -69,7 +73,6 @@
     "nuqs": "^2.4.1",
     "nylas": "^7.5.2",
     "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.17.1",
     "react-day-picker": "^8.10.1",
     "react-doc-viewer": "^0.1.14",
