--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "nanoid": "^5.0.9",
     "next": "^15.1.4",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "nuqs": "^2.4.1",
     "nylas": "^7.5.2",
