--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-inline-editing": "^1.0.10",
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.2",
