--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.10.0",
+    "@opentok/client": "^2.29.3",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -54,7 +55,9 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.67.2",
     "@tanstack/react-table": "^8.20.6",
+    "@types/opentok": "^2.14.4",
     "@uploadthing/react": "^7.1.5",
+    "@vonage/server-sdk": "^3.20.1",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -62,6 +65,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.7.4",
     "googleapis": "^144.0.0",
     "http": "^0.0.1-security",
     "lucide-react": "^0.471.1",
@@ -72,6 +76,7 @@
     "nodemailer": "^6.10.0",
     "nuqs": "^2.4.1",
     "nylas": "^7.5.2",
+    "opentok": "^2.21.2",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
     "react-day-picker": "^8.10.1",
