improve the ui of the dashboard

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="mongodb+srv://username:password@cluster.mongodb.net/workflow-sync"
+DATABASE_URL="mongodb+srv://username:password@cluster.mongodb.net/worksync"
 
 # NextAuth.js
 NEXTAUTH_SECRET="your-secret-key-here"
